--- a/prod_detail.html
+++ b/prod_detail.html
@@ -285,6 +285,182 @@
 				</section>
 			</div>
 
+			<!-- 제품설명 -->
+			<div id="cont1" class="tabListType3 tabItem4">
+				<ul>
+					<li class="current"><a href="#con1">제품설명</a></li>
+					<li><a href="#con2">상품평(0)</a></li>
+					<li><a href="#con3">배송/교환/환불 안내</a></li>
+					<li><a href="#">1:1 문의</a></li>
+				</ul>
+			</div>
+
+			<section class="prodDetailCon">
+				<img src="images/contents/img_detail.jpg" alt="" />
+				<h1 class="tit">제품정보</h1>
+				<div class="tableList tableListType3">
+					<table>
+						<caption>제품정보</caption>
+						<colgroup>
+							<col style="width:135px" />
+							<col style="width:400px" />
+							<col style="width:135px" />
+							<col />
+						</colgroup>
+						<tbody>
+							<tr>
+								<th scope="row">제품명</th>
+								<td>닥터레이 알투(R2) 스킨 리-셋 베리어 크림</td>
+								<th scope="row">제품코드</th>
+								<td>PDR0705</td>
+							</tr>
+							<tr>
+								<th scope="row">판매가격</th>
+								<td>20,000원</td>
+								<th scope="row">라인별</th>
+								<td></td>
+							</tr>
+							<tr>
+								<th scope="row">용량</th>
+								<td>12ml</td>
+								<th scope="row">기능별</th>
+								<td></td>
+							</tr>
+							<tr>
+								<th scope="row">제조업자</th>
+								<td>스킨앤스킨</td>
+								<th scope="row">제조국</th>
+								<td>한국</td>
+							</tr>
+							<tr>
+								<th scope="row">제조년월</th>
+								<td>2015-01-30 제조</td>
+								<th scope="row">기능성여부</th>
+								<td></td>
+							</tr>
+							<tr>
+								<th scope="row">품질유지기한</th>
+								<td>24/개봉 후 12개월</td>
+								<th scope="row">제품주요사양</th>
+								<td></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</section>
+			<!-- //제품설명 -->
+
+			<!-- 상품평 -->
+			<div id="con2" class="tabListType3 tabItem4">
+				<ul>
+					<li><a href="#con1">제품설명</a></li>
+					<li class="current"><a href="#con2">상품평(0)</a></li>
+					<li><a href="#con3">배송/교환/환불 안내</a></li>
+					<li><a href="#">1:1 문의</a></li>
+				</ul>
+			</div>
+			<div class="prodReview">
+				<ul>
+					<li>
+						<a href="#">
+							<span class="num">5</span>
+							<span class="point point5">5점</span>
+							<span class="tit">
+								자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요
+							</span>
+							<span class="writer">제제양</span>
+							<span class="date">2016-08-23</span>
+						</a>
+						<div class="con" style="display:block;">
+							막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!
+						</div>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">4</span>
+							<span class="point point4">4점</span>
+							<span class="tit">
+								자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요
+							</span>
+							<span class="writer">제제양</span>
+							<span class="date">2016-08-23</span>
+						</a>
+						<div class="con">
+							막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!
+						</div>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">3</span>
+							<span class="point point3">3점</span>
+							<span class="tit">
+								자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요
+							</span>
+							<span class="writer">제제양</span>
+							<span class="date">2016-08-23</span>
+						</a>
+						<div class="con">
+							막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!
+						</div>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">2</span>
+							<span class="point point2">2점</span>
+							<span class="tit">
+								자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요
+							</span>
+							<span class="writer">제제양</span>
+							<span class="date">2016-08-23</span>
+						</a>
+						<div class="con">
+							막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!
+						</div>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">1</span>
+							<span class="point point1">1점</span>
+							<span class="tit">
+								자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요자극적이지 않아서 좋아요
+							</span>
+							<span class="writer">제제양</span>
+							<span class="date">2016-08-23</span>
+						</a>
+						<div class="con">
+							막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!막상 써보니까 너무 좋아요막상 써보니까 너무 좋아요<br />
+							유분이 많지도 않고 딱 적당한것 같아요!!!
+						</div>
+					</li>
+				</ul>
+			</div>
+			<!-- //상품평 -->
+
+			<!-- 배송/교환/환불 안내 -->
+			<div id="con3" class="tabListType3 tabItem4">
+				<ul>
+					<li><a href="#con1">제품설명</a></li>
+					<li><a href="#con2">상품평(0)</a></li>
+					<li class="current"><a href="#con3">배송/교환/환불 안내</a></li>
+					<li><a href="#">1:1 문의</a></li>
+				</ul>
+			</div>
+			<!-- //배송/교환/환불 안내 -->
+
 		</div>
 	</section>
 	<!-- //container -->
