--- a/prod_detail.html
+++ b/prod_detail.html
@@ -448,6 +448,23 @@
 					</li>
 				</ul>
 			</div>
+			<div class="pagination">
+				<a href="#" class="pageNavi pageStart">처음으로</a>
+				<a href="#" class="pageNavi pagePrev">이전</a>
+				<span class="pageNum">
+					<strong>1</strong>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+					<a href="#">6</a>
+					<a href="#">7</a>
+					<a href="#">8</a>
+					<a href="#">9</a>
+				</span>
+				<a href="#" class="pageNavi pageNext">다음</a>
+				<a href="#" class="pageNavi pageEnd">끝으로</a>
+			</div>
 			<!-- //상품평 -->
 
 			<!-- 배송/교환/환불 안내 -->
