--- a/layout.html
+++ b/layout.html
@@ -241,6 +241,30 @@
 					<li><a href="#">모든피부</a></li>
 				</ul>
 			</div>
+
+			<br />
+
+			<div class="tabListType3 tabItem4">
+				<ul>
+					<li><a href="#">제품설명</a></li>
+					<li class="current"><a href="#">상품평(0)</a></li>
+					<li><a href="#">배송/교환/환불 안내</a></li>
+					<li><a href="#">1:1 문의</a></li>
+				</ul>
+			</div>
+
+			<br />
+
+			<div class="tabListType4 tabItem5">
+				<ul>
+					<li><a href="#">민감성피부</a></li>
+					<li class="current"><a href="#">건성/노화피부</a></li>
+					<li><a href="#">기미/잡티/색소피부</a></li>
+					<li><a href="#">지성/여드름피부</a></li>
+					<li><a href="#">모든피부</a></li>
+				</ul>
+			</div>
+
 			<hr>
 
 			<h2 class="subTitle2">게시판</h2>
