--- a/layout.html
+++ b/layout.html
@@ -512,7 +512,7 @@
 								<span class="option">
 									<button type="button" class="minus">상품빼기</button>
 									<button type="button" class="plus">상품더하기</button>
-									<span>1</span>
+									<input type="text" class="inputTxt" value="1" />
 								</span>
 								<button type="button" class="del">상품삭제</button>
 							</td>
@@ -533,7 +533,7 @@
 								<span class="option">
 									<button type="button" class="minus">상품빼기</button>
 									<button type="button" class="plus">상품더하기</button>
-									<span>1</span>
+									<input type="text" class="inputTxt" value="1" />
 								</span>
 								<button type="button" class="del">상품삭제</button>
 							</td>
@@ -554,7 +554,7 @@
 								<span class="option">
 									<button type="button" class="minus">상품빼기</button>
 									<button type="button" class="plus">상품더하기</button>
-									<span>1</span>
+									<input type="text" class="inputTxt" value="1" />
 								</span>
 								<button type="button" class="del">상품삭제</button>
 							</td>
