--- a/prod_detail.html
+++ b/prod_detail.html
@@ -181,7 +181,7 @@
 									<span class="option">
 										<button type="button" class="minus">상품빼기</button>
 										<button type="button" class="plus">상품더하기</button>
-										<span>1</span>
+										<input type="text" class="inputTxt" value="1" />
 									</span>
 								</td>
 							</tr>
