--- a/layout.html
+++ b/layout.html
@@ -128,6 +128,7 @@
 			<h1 class="memTitle">타이틀</h1>
 			<h2 class="subTitle">서브타이틀</h2>
 			<h2 class="subTitle2">서브타이틀2</h2>
+			<p class="titOpt">타이틀 오른쪽 컨텐츠</p>
 
 			<hr>
 
@@ -262,6 +263,313 @@
 					<li><a href="#">기미/잡티/색소피부</a></li>
 					<li><a href="#">지성/여드름피부</a></li>
 					<li><a href="#">모든피부</a></li>
+				</ul>
+			</div>
+
+			<hr>
+
+			<h2 class="subTitle2">제품 목록 형태</h2>
+
+			<div class="prodList">
+				<ul>
+					<li>
+						<span class="prodLabel label1">최저가</span>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="prodLabel label2">20%</span>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="prodLabel label3">BEST</span>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="prodList">
+				<ul class="prodListType2">
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample.gif" alt="" />
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="prodList">
+				<ul class="prodListType3">
+					<li class="rank1">
+						<a href="#">
+							<strong class="labelRank labelRank1">1위</strong>
+							<span class="thumb"><img src="images/img_rank1.jpg" alt="" /></span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank labelRank2">2위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank labelRank2">3위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">4위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">5위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">6위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">7위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">8위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<strong class="labelRank">9위</strong>
+							<span class="thumb"><img src="images/img_sample2.png" alt="" /></span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="prodList">
+				<ul class="prodListType4">
+					<li>
+						<span class="prodLabel label1">최저가</span>
+						<span class="thumb">
+							<img src="images/img_sample4.jpg" alt="" />
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="prodLabel label2">20%</span>
+						<span class="thumb">
+							<img src="images/img_sample4.jpg" alt="" />
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="prodLabel label3">BEST</span>
+						<span class="thumb">
+							<img src="images/img_sample4.jpg" alt="" />
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+					<li>
+						<span class="thumb">
+							<img src="images/img_sample4.jpg" alt="" />
+						</span>
+						<a href="#" class="prodLink">
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+						</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="prodList">
+				<ul class="prodListType5">
+					<li>
+						<span class="wrap">
+							<span class="thumb">
+								<img src="images/img_sample4.jpg" alt="" />
+							</span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<del>42,000원</del>
+							<strong class="sale">35,000원</strong>
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="btnBuy">바로구매</a>
+					</li>
+					<li>
+						<span class="wrap">
+							<span class="thumb">
+								<img src="images/img_sample4.jpg" alt="" />
+							</span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="btnBuy">바로구매</a>
+					</li>
+					<li>
+						<span class="wrap">
+							<span class="thumb">
+								<img src="images/img_sample4.jpg" alt="" />
+							</span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="btnBuy">바로구매</a>
+					</li>
+					<li>
+						<span class="wrap">
+							<span class="thumb">
+								<img src="images/img_sample4.jpg" alt="" />
+							</span>
+							<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+							<strong class="price">35,000원</strong>
+							<a href="#" class="basket">장바구니</a>
+						</span>
+						<a href="#" class="btnBuy">바로구매</a>
+					</li>
 				</ul>
 			</div>
 
