--- a/mypage4.html
+++ b/mypage4.html
@@ -135,7 +135,7 @@
 			<div class="myCoupon">
 				<p>쿠폰은 주문 시 1회에 한해 적용, 1회 사용 시 재 사용일 불가능합니다.<br />
 				쿠폰은 적용 가능한 상품이 따로 적용되어 있는 경우 해당 상품 구매 시에 사용가능합니다.</p>
-				<input type="text" class="inputTxt" placeholder="쿠폰 번호를 등록해주세요." />
+				<input type="text" class="inputTxt" placeholder="쿠폰 번호를 등록해주세요." style="width:290px;" />
 				<button type="submit" class="btnM btnType1">쿠폰번호 인증하기</button>
 			</div>
 
